@@ -140,6 +140,21 @@
         <div id="bottomRight">
           <h2>News</h2>
 
+          <h3>August 1st 2008</h3>
+          <p>
+          <b>Unstable</b>
+          version 2.23.91 was released!
+          New in this release
+          </p>
+          <ul>
+            <li>cheese.desktop file now respects freedesktop SPEC</li>
+            <li>add the dynamic bindir to the dbus file</li>
+            <li>update waf to 1.4.3 and make it working again</li>
+            <li>added/updated translations</li>
+          </ul>
+          <a href="download.html">Download it</a>
+          (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-September/msg00015.html">full release notes</a>)
+
           <h3>August 18th 2008</h3>
           <p>
           <b>Unstable</b>
@@ -177,23 +192,6 @@
           </ul>
           <a href="download.html">Download it</a>
           (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-August/msg00021.html">full release notes</a>)
-
-          <h3>July 21st 2008</h3>
-          <p>
-          <b>Unstable</b>
-          version 2.23.5 was released!
-          New in this release
-          </p>
-          <ul>
-            <li>make recording of videos work again</li>
-            <li>write logs, when cheese crashes</li>
-            <li>allow to choose the webcam using the preference dialog</li>
-            <li>start cheese when you plug in your camera</li>
-            <li>use ogv as default video extension</li>
-            <li>added/updated translations</li>
-          </ul>
-          <a href="download.html">Download it</a>
-          (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-July/msg00041.html">full release notes</a>)
 
         </div>
       </div><!-- bottom -->
