@@ -1,3 +1,9 @@
+2008-09-04  daniel g. siegel <dgsiegel@gmail.com>
+
+	* www.gnome.org/projects/cheese/download.html,
+	  www.gnome.org/projects/cheese/index.html: 
+	  populate the cheese 2.23.91 release
+
 2008-09-01  Dodji Seketeli  <dodji@gnome.org>
 
 	* www.gnome.org/projects/gtksourceviewmm/*: Updated the API doc.
